Update navbar, add project, general improvements

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
   </ul>
   <!-- SIDEBAR (ON SMALL DEVICES) -->
   <ul class="navbar-sidebar">
-      <li class="nav-menu-close-button">
-        <i class="fa-solid fa-xmark"></i>
-      </li>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#about-me">About Me</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
+    <li class="nav-menu-close-button">
+      <i class="fa-solid fa-xmark"></i>
+    </li>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#portfolio">Portfolio</a></li>
+    <li><a href="#about-me">About Me</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
 
 <!-- HOME -->
@@ -116,9 +116,9 @@
   <div class="container">
     <h2>about me.</h2>
     <p>
-      Hey there, welcome to my Portfolio Website! My name is Burak and I am a Data Analyst and Python Developer.
-      Here is my portfolio website, particularly for showcasing my technical projects, case studies and try-outs across 
-      various fields. Please visit <a href="https://www.duruburak.com">duruburak.com</a> to see my personal website, which represents me 
+      Hey there, my name is Burak and I am a Data Analyst and Python Developer. Here is my portfolio website, 
+      particularly for showcasing my technical projects, case studies and try-outs across various fields. 
+      Please visit <a href="https://www.duruburak.com">duruburak.com</a> to see my personal website, which represents me 
       much better. Both websites are solo-developed by me. I love dealing with data, coding, video games, art and music 🫰.
     </p>
     <div class="about-me-skills">
@@ -133,6 +133,8 @@
       <button class="gradient-btn"><span class="gradient-txt">HTML5</span></button>
       <button class="gradient-btn"><span class="gradient-txt">CSS</span></button>
       <button class="gradient-btn"><span class="gradient-txt">React</span></button>
+      <button class="gradient-btn"><span class="gradient-txt">Tableau</span></button>
+      <button class="gradient-btn"><span class="gradient-txt">Power BI</span></button>
       <button class="gradient-btn"><span class="gradient-txt">AWS</span></button>
     </div>
   </div>
