Add Google Tag Manager

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
     ]
   }
   </script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CE3H8CBKB5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CE3H8CBKB5');
+  </script>
 </head>
 
 <body>
@@ -126,7 +136,7 @@
     <h2>about me.</h2>
     <p>
       Hey there, my name is Burak and I am a Data Analyst and Python Developer. Here is my portfolio website, 
-      particularly for showcasing my technical projects, case studies and try-outs across various fields. 
+      particularly for showcasing my non-professional technical projects, case studies and try-outs across various fields. 
       Please visit <a href="https://www.duruburak.com">duruburak.com</a> to see my personal website, which represents me 
       much better. Both websites are solo-developed by me. I rather like making sense of data, coding, video games, art and music 🫰.
     </p>
